# latticeville

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: spec-final-outcome.mdc
latticeville/: __init__.py  __main__.py  app.py
latticeville/db/: memory_log.py  replay_log.py
latticeville/llm/: __init__.py  base.py  embedder.py  fake_llm.py  mlx_llm.py  prompt_fixtures.py  prompt_llm.py  prompts.py
latticeville/render/: __init__.py  live_tail.py  main_viewer.py  replay_picker.py  replay_player.py  replay_reader.py  terminal_input.py  textual_app.py  textual_widgets.py  viewer.py  world_editor.py  world_map.py
latticeville/sim/: __init__.py  agent_policy.py  contracts.py  memory.py  movement.py  pathfinding.py  planning.py  reflection.py  tick_loop.py  world_loader.py  world_state.py  world_tiles.py  world_utils.py
replay/2026-01-31T16-00-50Z/: run.jsonl
replay/2026-01-31T16-06-56Z/: run.jsonl
replay/2026-01-31T16-18-38Z/: run.jsonl
replay/2026-01-31T16-22-31Z/: run.jsonl
tests/: test_contracts.py  test_embedder.py  test_llm_policy.py  test_main_viewer.py  test_memory.py  test_mouse_select.py  test_planning.py  test_prompts.py  test_reflection.py  test_replay.py  test_replay_picker.py  test_tick_loop.py  test_viewer.py  test_world_loader.py
thinking/: architecture.md  index.md  master_plan.md  prompts_from_paper.md  research.md  spec.md  vllm_metal_smoke.md  world_format.md
world/: README.md  cafe.map  characters.json  harbor.map  library.map  market.map  overview.map  park.map  street.map  world.json  world.map
(+13 files in other folders)
