[project]
name = "latticeville"
version = "0.1.0"
description = "AI Village Simulation named Latticeville"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.12.5",
  "rich",
  "textual>=7.5.0",
  "torch>=2.10.0",
  "vllm-mlx>=0.2.1",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[tool.ruff]
target-version = "py312"
